update: 側邊選單&&個人設定調整

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/index.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/index.cshtml
@@ -36,3 +36,20 @@
 
     </div>
 </div>
+<script>
+    (function ($, window, document, undefined) {
+        var url = new URL(location.href);
+        var target = url.searchParams.get('tab');
+        if (target != null) {
+            $('[data-tab-target]').each(function (idx, item) {
+                let tabTarget = item.getAttribute('data-tab-target');
+                if (tabTarget == target) {
+                    $(item).addClass('is-active');
+                } else {
+                    $(item).removeClass('is-active');
+                }
+            });
+        }
+    })(jQuery, window, document);
+
+</script>
