--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
@@ -29,7 +29,7 @@
 
                     </div>
                     <div class="c-minorInfo__main">
-                        <span class="o-views o-views--xs" id="articleViewCount"></span>
+                        <span class="o-views o-views--xs" data-eh="visit-update,visit-exec" eh-visit-pageid="@Sitecore.Context.Item.ID.ToString()" eh-visit-qs="articleId=@HttpUtility.UrlEncode(Request.QueryString["articleId"])"></span>
                     </div>
                 </div>
             </div>
@@ -68,34 +68,3 @@
         </div>
     </div>
 </section>
-
-<script>
-    (function ($, window, document, undefined) {
-        document.addEventListener('DOMContentLoaded', function () {
-            let url = new URL(location.href);
-
-            let params = {
-                pageId: '@Sitecore.Context.Item.ID.ToString()',
-                url: url.origin + url.pathname + "?id=" + '@Sitecore.Context.Item.ID.ToString()',
-                querystring: ['id=' + '@Sitecore.Context.Item.ID.ToString()']
-            };
-
-            $.ajax({
-                type: "POST",
-                url: '@ClientRoute.GenerateUrl(this, "VisitCount", "Update")',
-                data: params,
-                success: function (res) {
-                    if (res.Status == "Success" && res.Count != null) {
-                        $("#articleViewCount").text(res.Count.toLocaleString('en-US'));
-                    }
-                    else {
-                        $("#articleViewCount").text("0");
-                    }
-                },
-                error: function (xhr, status, error) {
-                    console.error("AJAX error: " + error);
-                }
-            });
-        });
-    })(jQuery, window, document);
-</script>
